--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -44,11 +44,21 @@
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "\n",
-    "# TODO: Create compute cluster\n",
+    "# From the Azure documentation:\n",
     "# Use vm_size = \"Standard_D2_V2\" in your provisioning configuration.\n",
     "# max_nodes should be no greater than 4.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "cluster_name = \"project-cluster\"\n",
+    "\n",
+    "try:\n",
+    "    cpu_cluster = ComputeTarget(workspace=ws, name=cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
+    "                                                           max_nodes=4)\n",
+    "    cpu_cluster = ComputeTarget.create(ws, cluster_name, compute_config)\n",
+    "\n",
+    "cpu_cluster.wait_for_completion(show_output=True)"
    ]
   },
   {
@@ -80,19 +90,32 @@
     "import os\n",
     "\n",
     "# Specify parameter sampler\n",
-    "ps = ### YOUR CODE HERE ###\n",
+    "# From the Azure documentation\n",
+    "# Uniform takes args (min_value, max_value) of the distribution\n",
+    "ps = RandomParameterSampling( {\n",
+    "        \"C\": uniform(0, 10),\n",
+    "        \"max_iter\": uniform(20, 180)\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Specify a Policy\n",
-    "policy = ### YOUR CODE HERE ###\n",
+    "# Using the bandit policy with a slack factor of 0.2. (models that perform ~83% as good as best run are evaluated.)\n",
+    "policy = BanditPolicy(slack_factor = 0.2, evaluation_interval=1, delay_evaluation=5)\n",
     "\n",
     "if \"training\" not in os.listdir():\n",
     "    os.mkdir(\"./training\")\n",
     "\n",
     "# Create a SKLearn estimator for use with train.py\n",
-    "est = ### YOUR CODE HERE ###\n",
+    "est = SKLearn(\"train.py\")\n",
     "\n",
     "# Create a HyperDriveConfig using the estimator, hyperparameter sampler, and policy.\n",
-    "hyperdrive_config = ### YOUR CODE HERE ###"
+    "hyperdrive_config = HyperDriveConfig(estimator=est,\n",
+    "                             hyperparameter_sampling=ps,\n",
+    "                             policy=policy,\n",
+    "                             primary_metric_name=\"accuracy\",\n",
+    "                             primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
+    "                             max_total_runs=100,\n",
+    "                             max_concurrent_runs=4)"
    ]
   },
   {
@@ -103,7 +126,9 @@
    "source": [
     "# Submit your hyperdrive run to the experiment and show run details with the widget.\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "hyperdrive_run = exp.submit(hyperdrive_config)\n",
+    "\n",
+    "RunDetails(hyperdrive_run).show()"
    ]
   },
   {
@@ -127,8 +152,9 @@
    "source": [
     "import joblib\n",
     "# Get your best run and save the model from that run.\n",
+    "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "joblib.dump(best_run, 'hd_bestrun.joblib'))"
    ]
   },
   {
@@ -139,11 +165,10 @@
    "source": [
     "from azureml.data.dataset_factory import TabularDatasetFactory\n",
     "\n",
-    "# Create TabularDataset using TabularDatasetFactory\n",
     "# Data is available at: \n",
     "# \"https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv\"\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "ds = TabularDatasetFactory.from_delimited_files(path='https://automlsamplenotebookdata.blob.core.windows.net/automl-sample-notebook-data/bankmarketing_train.csv')\n"
    ]
   },
   {
@@ -168,7 +193,7 @@
     "from train import clean_data\n",
     "\n",
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(### YOUR DATA OBJECT HERE ###)"
+    "x, y = clean_data(clean_data(ds)"
    ]
   },
   {
@@ -193,16 +218,13 @@
     "from azureml.train.automl import AutoMLConfig\n",
     "\n",
     "# Set parameters for AutoMLConfig\n",
-    "# NOTE: DO NOT CHANGE THE experiment_timeout_minutes PARAMETER OR YOUR INSTANCE WILL TIME OUT.\n",
-    "# If you wish to run the experiment longer, you will need to run this notebook in your own\n",
-    "# Azure tenant, which will incur personal costs.\n",
     "automl_config = AutoMLConfig(\n",
     "    experiment_timeout_minutes=30,\n",
-    "    task=,\n",
-    "    primary_metric=,\n",
-    "    training_data=,\n",
-    "    label_column_name=,\n",
-    "    n_cross_validations=)"
+    "    task=\"classification\",\n",
+    "    primary_metric=\"accuracy\",\n",
+    "    training_data=x,\n",
+    "    label_column_name=\"y\",\n",
+    "    n_cross_validations=5)"
    ]
   },
   {
@@ -222,8 +244,7 @@
    "outputs": [],
    "source": [
     "# Submit your automl run\n",
-    "\n",
-    "### YOUR CODE HERE ###"
+    "automl_run = experiment.submit(automl_config, show_output=True)"
    ]
   },
   {
@@ -233,8 +254,9 @@
    "outputs": [],
    "source": [
     "# Retrieve and save your best automl model.\n",
+    "a_best_run = automl_run.get_best_run_by_primary_metric()\n",
     "\n",
-    "### YOUR CODE HERE ###"
+    "joblib.dump(a_best_run, 'automl_bestrun.joblib'))"
    ]
   }
  ],
