--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -360,7 +360,11 @@
             "****************************************************************************************************\n",
             "\n",
             " ITERATION   PIPELINE                                       DURATION      METRIC      BEST\n",
-            "         0   "
+            "         0   MaxAbsScaler LightGBM                          0:00:35       0.9151    0.9151\n",
+            "         1   MaxAbsScaler XGBoostClassifier                 0:00:34       0.9149    0.9151\n",
+            "         2   MaxAbsScaler RandomForest                      0:00:24       0.8931    0.9151\n",
+            "         3   MaxAbsScaler RandomForest                      0:00:25       0.8880    0.9151\n",
+            "         4   MaxAbsScaler SGD                               0:00:30       0.8660    0.9151\n"
           ]
         }
       ],
@@ -388,6 +392,26 @@
       "outputs": [],
       "execution_count": null,
       "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cpu_cluster.delete()"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
     }
   ],
   "metadata": {
