--- a/udacity-project.ipynb
+++ b/udacity-project.ipynb
@@ -197,11 +197,21 @@
         "\n",
         "#joblib.dump(best_run, 'hd_bestrun_model.joblib')"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 88,
+          "data": {
+            "text/plain": "[{'run_id': 'HD_8a34c27a-52ba-4415-aaf5-958cbe24e86f_89',\n  'hyperparameters': '{\"C\": 7.21705929854287, \"max_iter\": 97.0}',\n  'best_primary_metric': 0.9141990068052235,\n  'status': 'Completed'}]",
+            "text/html": "[{'run_id': 'HD_8a34c27a-52ba-4415-aaf5-958cbe24e86f_89', 'hyperparameters': '{\"C\": 7.21705929854287, \"max_iter\": 97.0}', 'best_primary_metric': 0.9141990068052235, 'status': 'Completed'}]"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 88,
       "metadata": {
         "gather": {
-          "logged": 1606184598393
+          "logged": 1606188707030
         },
         "jupyter": {
           "outputs_hidden": false,
@@ -408,7 +418,17 @@
             "        52   SparseNormalizer XGBoostClassifier             0:01:05       0.9136    0.9153\n",
             "        53   VotingEnsemble                                 0:01:30       0.9176    0.9176\n",
             "        54   StackEnsemble                                  0:01:36       0.9166    0.9176\n",
-            "Stopping criteria reached at iteration 55. Ending experiment.\n"
+            "Stopping criteria reached at iteration 55. Ending experiment.\n",
+            "****************************************************************************************************\n",
+            "Current status: BestRunExplainModel. Best run model explanations started\n",
+            "Current status: ModelExplanationDataSetSetup. Model explanations data setup completed\n",
+            "Current status: PickSurrogateModel. Choosing LightGBM as the surrogate model for explanations\n",
+            "Current status: EngineeredFeatureExplanations. Computation of engineered features started\n",
+            "Current status: EngineeredFeatureExplanations. Computation of engineered features completed\n",
+            "Current status: RawFeaturesExplanations. Computation of raw features started\n",
+            "Current status: RawFeaturesExplanations. Computation of raw features completed\n",
+            "Current status: BestRunExplainModel. Best run model explanations completed\n",
+            "****************************************************************************************************\n"
           ]
         }
       ],
@@ -422,6 +442,9 @@
           "transient": {
             "deleting": false
           }
+        },
+        "gather": {
+          "logged": 1606188687500
         }
       }
     },
@@ -429,21 +452,57 @@
       "cell_type": "code",
       "source": [
         "# Retrieve and save your best automl model.\n",
-        "a_best_run = automl_run.get_best_run_by_primary_metric()\n",
+        "a_best_run = automl_run.get_best_child()\n",
         "\n",
         "a_best_run.get_details()"
       ],
-      "outputs": [],
-      "execution_count": null,
-      "metadata": {}
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 90,
+          "data": {
+            "text/plain": "{'runId': 'AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53',\n 'status': 'Completed',\n 'startTimeUtc': '2020-11-24T03:26:44.169078Z',\n 'endTimeUtc': '2020-11-24T03:28:14.630269Z',\n 'properties': {'runTemplate': 'automl_child',\n  'pipeline_id': '__AutoML_Ensemble__',\n  'pipeline_spec': '{\"pipeline_id\":\"__AutoML_Ensemble__\",\"objects\":[{\"module\":\"azureml.train.automl.ensemble\",\"class_name\":\"Ensemble\",\"spec_class\":\"sklearn\",\"param_args\":[],\"param_kwargs\":{\"automl_settings\":\"{\\'task_type\\':\\'classification\\',\\'primary_metric\\':\\'accuracy\\',\\'verbosity\\':20,\\'ensemble_iterations\\':15,\\'is_timeseries\\':False,\\'name\\':\\'udacity-project\\',\\'compute_target\\':\\'local\\',\\'subscription_id\\':\\'ac15aef5-0abe-4be6-a0bd-40abc1594138\\',\\'region\\':\\'southcentralus\\',\\'spark_service\\':None}\",\"ensemble_run_id\":\"AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53\",\"experiment_name\":null,\"workspace_name\":\"quick-starts-ws-127621\",\"subscription_id\":\"ac15aef5-0abe-4be6-a0bd-40abc1594138\",\"resource_group_name\":\"aml-quickstarts-127621\"}}]}',\n  'training_percent': '100',\n  'predicted_cost': None,\n  'iteration': '53',\n  '_azureml.ComputeTargetType': 'local',\n  '_aml_system_scenario_identification': 'Local.Child',\n  'run_template': 'automl_child',\n  'run_preprocessor': '',\n  'run_algorithm': 'VotingEnsemble',\n  'conda_env_data_location': 'aml://artifact/ExperimentRun/dcid.AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53/outputs/conda_env_v_1_0_0.yml',\n  'model_data_location': 'aml://artifact/ExperimentRun/dcid.AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53/outputs/model.pkl',\n  'model_size_on_disk': '1334061',\n  'scoring_data_location': 'aml://artifact/ExperimentRun/dcid.AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53/outputs/scoring_file_v_1_0_0.py',\n  'model_exp_support': 'True',\n  'pipeline_graph_version': '1.0.0',\n  'model_name': 'AutoML677ac730d53',\n  'staticProperties': '{}',\n  'score': '0.9175720789074356',\n  'run_properties': \"classification_labels=None,\\n                              estimators=[('45',\\n                                           Pipeline(memory=None,\\n                                                    steps=[('standardscalerwrapper',\\n                                                            <azureml.automl.runtime.shared.model_wrappers.StandardScalerWrapper object at 0x7f6ddc4af710>\",\n  'pipeline_script': '{\"pipeline_id\":\"__AutoML_Ensemble__\",\"objects\":[{\"module\":\"azureml.train.automl.ensemble\",\"class_name\":\"Ensemble\",\"spec_class\":\"sklearn\",\"param_args\":[],\"param_kwargs\":{\"automl_settings\":\"{\\'task_type\\':\\'classification\\',\\'primary_metric\\':\\'accuracy\\',\\'verbosity\\':20,\\'ensemble_iterations\\':15,\\'is_timeseries\\':False,\\'name\\':\\'udacity-project\\',\\'compute_target\\':\\'local\\',\\'subscription_id\\':\\'ac15aef5-0abe-4be6-a0bd-40abc1594138\\',\\'region\\':\\'southcentralus\\',\\'spark_service\\':None}\",\"ensemble_run_id\":\"AutoML_677ac730-d1d6-4ef6-b75c-1bb19752f644_53\",\"experiment_name\":null,\"workspace_name\":\"quick-starts-ws-127621\",\"subscription_id\":\"ac15aef5-0abe-4be6-a0bd-40abc1594138\",\"resource_group_name\":\"aml-quickstarts-127621\"}}]}',\n  'training_type': 'MeanCrossValidation',\n  'num_classes': '2',\n  'framework': 'sklearn',\n  'fit_time': '71',\n  'goal': 'accuracy_max',\n  'class_labels': '',\n  'primary_metric': 'accuracy',\n  'errors': '{}',\n  'fitted_pipeline': \"Pipeline(memory=None,\\n         steps=[('datatransformer',\\n                 DataTransformer(enable_dnn=None, enable_feature_sweeping=None,\\n                                 feature_sweeping_config=None,\\n                                 feature_sweeping_timeout=None,\\n                                 featurization_config=None, force_text_dnn=None,\\n                                 is_cross_validation=None,\\n                                 is_onnx_compatible=None, logger=None,\\n                                 observer=None, task=None, working_dir=None)),\\n                ('prefittedsoftvotingclassifier',...\\n                                                                                                  l1_ratio=0.3877551020408163,\\n                                                                                                  learning_rate='invscaling',\\n                                                                                                  loss='log',\\n                                                                                                  max_iter=1000,\\n                                                                                                  n_jobs=1,\\n                                                                                                  penalty='none',\\n                                                                                                  power_t=0,\\n                                                                                                  random_state=None,\\n                                                                                                  tol=0.01))],\\n                                                                     verbose=False))],\\n                                               flatten_transform=None,\\n                                               weights=[0.16666666666666666,\\n                                                        0.08333333333333333,\\n                                                        0.08333333333333333,\\n                                                        0.25,\\n                                                        0.08333333333333333,\\n                                                        0.08333333333333333,\\n                                                        0.08333333333333333,\\n                                                        0.16666666666666666]))],\\n         verbose=False)\",\n  'friendly_errors': '{}',\n  'onnx_model_resource': '{}',\n  'error_code': '',\n  'failure_reason': '',\n  'feature_skus': 'automatedml_sdk_guardrails',\n  'dependencies_versions': '{\"azureml-widgets\": \"1.18.0\", \"azureml-train\": \"1.18.0\", \"azureml-train-restclients-hyperdrive\": \"1.18.0\", \"azureml-train-core\": \"1.18.0\", \"azureml-train-automl\": \"1.18.0\", \"azureml-train-automl-runtime\": \"1.18.0\", \"azureml-train-automl-client\": \"1.18.0\", \"azureml-tensorboard\": \"1.18.0\", \"azureml-telemetry\": \"1.18.0\", \"azureml-sdk\": \"1.18.0\", \"azureml-samples\": \"0+unknown\", \"azureml-pipeline\": \"1.18.0\", \"azureml-pipeline-steps\": \"1.18.0\", \"azureml-pipeline-core\": \"1.18.0\", \"azureml-opendatasets\": \"1.18.0\", \"azureml-model-management-sdk\": \"1.0.1b6.post1\", \"azureml-mlflow\": \"1.18.0\", \"azureml-interpret\": \"1.18.0\", \"azureml-explain-model\": \"1.18.0\", \"azureml-defaults\": \"1.18.0\", \"azureml-dataset-runtime\": \"1.18.0\", \"azureml-dataprep\": \"2.4.2\", \"azureml-dataprep-rslex\": \"1.2.2\", \"azureml-dataprep-native\": \"24.0.0\", \"azureml-datadrift\": \"1.18.0\", \"azureml-core\": \"1.18.0\", \"azureml-contrib-services\": \"1.18.0\", \"azureml-contrib-server\": \"1.18.0\", \"azureml-contrib-reinforcementlearning\": \"1.18.0\", \"azureml-contrib-pipeline-steps\": \"1.18.0\", \"azureml-contrib-notebook\": \"1.18.0\", \"azureml-contrib-interpret\": \"1.18.0\", \"azureml-contrib-gbdt\": \"1.18.0\", \"azureml-contrib-fairness\": \"1.18.0\", \"azureml-contrib-dataset\": \"1.18.0\", \"azureml-cli-common\": \"1.18.0\", \"azureml-automl-runtime\": \"1.18.0\", \"azureml-automl-core\": \"1.18.0\", \"azureml-accel-models\": \"1.18.0\"}',\n  'num_cores': '2',\n  'num_logical_cores': '2',\n  'peak_memory_usage': '4462552',\n  'vm_configuration': 'Intel(R) Xeon(R) Platinum 8171M CPU @ 2.60GHz',\n  'core_hours': '0.011836274166666638'},\n 'inputDatasets': [],\n 'outputDatasets': [],\n 'logFiles': {}}"
+          },
+          "metadata": {}
+        }
+      ],
+      "execution_count": 90,
+      "metadata": {
+        "gather": {
+          "logged": 1606188842124
+        }
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "cpu_cluster.delete()"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n",
+            "Current provisioning state of AmlCompute is \"Deleting\"\n",
+            "\n"
+          ]
+        }
+      ],
+      "execution_count": 91,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -454,6 +513,9 @@
           "transient": {
             "deleting": false
           }
+        },
+        "gather": {
+          "logged": 1606188875485
         }
       }
     }
